--- a/static/index.css
+++ b/static/index.css
@@ -11,6 +11,7 @@ body {
 
 header {
 	background-color: lightblue;
+	text-align: center;
 }
 
 h1,h2 {
@@ -36,11 +37,14 @@ h1,h2 {
 	padding: 5px;
 }
 
-.navigation-entry {
+.bar-entry {
 	margin: 5px;
     padding: 5px;
-    border: solid forestgreen;
 	text-align: center;
+}
+
+.bar-link-entry {
+    border: solid forestgreen;
 }
 
 #below-navbar {
@@ -57,13 +61,6 @@ h1,h2 {
     border-bottom: none;
  
 }
-
-/* .sidebar-entry { */
-/* 	display: flex; */
-/* 	align-items: center; */
-/* 	margin: 1em; */
-/* 	justify-content: center; */
-/* } */
 
 #the_frame {
 	display: block;
